:tada: Second Day -  Finished Home and Create-Pass layout

--- a/home.html
+++ b/home.html
@@ -22,7 +22,10 @@
             <img src="./assets/img/logo.svg" alt="logotipo da Rocket.Q">
         </header>
 
-        <div id="bg"></div>
+        <div id="bg">
+            <div class="ball top"></div>
+            <div class="ball bottom"></div>
+        </div>
 
         <main>
             <div class="container">
